kubernetes/base/flux-system/weave-gitops/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "${APP}"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Weave-gitops
    gethomepage.dev/icon: flux-cd
    gethomepage.dev/description: Flux Dashboard
spec:
  hostnames:
    - "gitops.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: "${APP}"
          port: 9001
